# config

./: README.md  arch_install_normal.sh
autostart.dwm/: README.md  autostart.sh  autostart_wait.sh  config.sh  display.sh  dualmon.sh  dwm-status-refresh.backup.sh  dwm-status-refresh.new.sh  dwm-status-refresh.sh  dwm-status.sh  vol-toggle.sh  vol-up.sh  wp-autochange.sh
autostart.dwm/core/: engine.sh  source.sh
autostart.dwm/dwmbar-functions/: dwm_alsa.sh  dwm_battery.sh  dwm_date.sh  dwm_memory.sh  dwm_network.sh  dwm_transmission.sh
autostart.dwm/dwmbar-themes/: default-theme.sh  dwmbar-theme-default.sh  dwmbar-theme-main.sh
autostart.dwm/function/: dwm_playerctl.sh  dwm_status_update.sh  dwm_vol_setup.sh  suspend.sh  vol-down.sh  vol-toggle.sh  vol-up.sh  wp-change.sh
autostart.dwm/informations/: dwm_alsa.sh  dwm_backlight.sh  dwm_battery.sh  dwm_ccurse.sh  dwm_cmus.sh  dwm_countdown.sh  dwm_date.sh  dwm_keyboard.sh  dwm_mail.sh  dwm_memory.sh  dwm_network.sh  dwm_pulse.sh  dwm_resources.sh  dwm_transmission.sh  dwm_vpn.sh  dwm_weather.sh
autostart.dwm/setup/: display.sh  inverse-scroll.sh  run-mailsync.sh
autostart.dwm/themes/: dwmbar-theme-282a36.sh  dwmbar-theme-main.sh
configstore/: update-notifier-npm.json
dmenu/: CMakeLists.txt  README.md  config.def.h  config.h  config.mk  dmenu.1  dmenu.c  dmenu.h  dmenu_define.h  dmenu_sys_api.h  drw.c  drw.h  stest.1  util.h
dmenu/.cache/clangd/index/: arg.h.35AE351405829FC6.idx  config.h.802DAA20071739C4.idx  dmenu.c.2DF916E9F7D74384.idx  drw.c.E83E690239A66CCD.idx  drw.h.041D493D2B28482C.idx  stest.c.818A1F4AABAE4D85.idx  util.c.AC21BA3805EE8C1C.idx  util.h.E19ACE3B4C02B473.idx
dunst/: dunstrc
dwm/: .gitignore  CMakeLists.txt  Makefile  README.md  config.def.h  config.h  config.mk  drw.c  drw.h  dwm.1  dwm.c  dwm.c_  dwm.desktop  dwm.h  dwm_sys_api.h
dwm/.cache/clangd/index/: config.h.2F1A721DB29DBE8B.idx  config.h.5012C7E794115C61.idx  config.h.69573FAA14D93927.idx  drw.c.60553F20C5F94243.idx  drw.c.C113E5451A1891CF.idx  drw.c.C66209E523492E90.idx  drw.h.506272E56E492B0A.idx  drw.h.5F1F5B95C7CBCBCA.idx  drw.h.8928811638B590D5.idx  dwm.c.0920DD27181CB853.idx  dwm.c.7D6DEBC349398966.idx  dwm.c.BC2A6B1672B030E9.idx  util.c.0BE043B5F00BD3F1.idx  util.c.28B524D9EE83B455.idx  util.c.57E17ABAA64F3F4E.idx  util.h.6B31B5B93EC17A62.idx  util.h.8C4A3DBA6C1DE1D1.idx  util.h.D1436738017E3D3F.idx
dwm/include/: config.h  dwm.h  dwm_define.h  util.h
dwm/src/: drw.c  dwm.c
etc/systemd/: logind.conf
fcitx5/conf/: cached_layouts  classicui.conf  pinyin.conf
nvim/: coc-settings.json  init.vim
ranger/: commands.py  rc.conf  rifle.conf  scope.sh
ranger/plugins/: devicons.py~
rofi/: sunowsir-theme.rasi
slock/: CMakeLists.txt  config.def.h  config.h  config.mk  config.mk.orig  slock  slock.c
slock/.cache/clangd/index/: arg.h.A9FDE5F14D1209E4.idx  arg.h.FFF2667E8C9B61B7.idx  config.h.1D78E4E171BA5F8C.idx  config.h.4B2AA5433C5BB693.idx  explicit_bzero.c.6382569266E068DB.idx  explicit_bzero.c.BD2E93E0BA3CE74E.idx  slock.c.3A482D056892FF5B.idx  slock.c.AB1FACF2B89B7784.idx  util.h.7A1AB36AC4B4EEE0.idx  util.h.D18C5E4AA7E91905.idx
st/: .gitignore  CMakeLists.txt  README.md  config.def.h  config.h  config.mk  st.1  st.c  st.h  st_define.h  st_sys_api.h  x.c
st/.cache/clangd/index/: arg.h.AE48380535C57B0C.idx  arg.h.B9C2832BD047C0EA.idx  config.h.2986207C6CA8BC4B.idx  config.h.FCA12A8D68CCA468.idx  hb.c.707B22DF9DCFEFE1.idx  hb.c.F8053FB009A20AB3.idx  hb.h.95DCBCFF8681C044.idx  hb.h.A54ACFFD3383B3B2.idx  st.c.46082B4FAED62CCC.idx  st.c.603A8A39227A41BC.idx  st.h.665AED6CDA6E25B6.idx  st.h.A4FDD393A935513F.idx  win.h.A8A6927364134047.idx  win.h.B8BEF2174E78A295.idx  x.c.52F73856C76842A2.idx  x.c.C677C168CD062AC3.idx
zsh/: antigen.config.zsh  fzf.config.zsh  fzf.zsh  fzf_preview.py  golang.config.zsh  init.zsh  persional.config.zsh  proxy.config.zsh  zinit.config.zsh  zshrc  zshrc.zwc
